<resources>
    <string name="app_name">Chess_Clock_App</string>
    <string name="welcome_text">Welcome\nto the Chess Clock App!</string>
    <string name="menu">Menu</string>
    <string name="stored_games">Stored Games</string>
    <string name="settings">Settings</string>
    <string name="pairing">Pairing</string>
    <string name="pair_new_device"> Add new device </string>
    <string name="paired_devices"> Paired Devices </string>
    <string name="placeholder">Generic Placeholder</string>

    <string name="device_placeholder">Device</string>
    <string name="device_settings">Device settings</string>

    <string name="stop_search">Stop Search</string>
    <string name="cancel_search">Cancel Search</string>

    <string name="searching_devices">Searching for nearby devices…</string>
    <string name="no_paired_devices">No paired devices</string>
    <string name="nearby_devices">Nearby devices</string>
    <string name="no_nearby_devices">No nearby devices found</string>
    <string name="sync">Sync</string>
    <string name="no_uploaded_games">There are\n no uploaded games yet</string>
    <string name="game_properties">Game Properties</string>
    <string name="cancel_sync">Cancel Pairing</string>
    <string name="but">But</string>
</resources>