<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/top_bar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:padding="16dp"/>

    <Button
        android:id="@+id/gamesButtonDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stored_games"
        android:textColor="@color/text"
        android:backgroundTint="@color/background"/>

    <Button
        android:id="@+id/pairingButtonDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pairing"
        android:textColor="@color/text"
        android:backgroundTint="@color/background"/>

    <Button
        android:id="@+id/settingsButtonDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/text"
        android:backgroundTint="@color/background"/>

</LinearLayout>