<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <!-- Paired devices heading -->

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/stored_games"
        android:textColor="@color/text"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Available games -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gamesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp"

        app:layout_constraintBottom_toTopOf="@id/syncingIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <!-- Displayed over the paired devices area if the list is empty -->

    <TextView
        android:id="@+id/noUploadedGamesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_uploaded_games"
        android:textColor="@color/text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/gamesRecyclerView"
        app:layout_constraintEnd_toEndOf="@id/gamesRecyclerView"
        app:layout_constraintStart_toStartOf="@id/gamesRecyclerView"
        app:layout_constraintTop_toTopOf="@id/gamesRecyclerView" />


    <!-- Loading animation -->

    <ProgressBar
        android:id="@+id/syncingIndicator"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/syncButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Starts or stops searching -->

    <Button
        android:id="@+id/syncButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/list_item_background"
        android:text="@string/sync"
        android:textColor="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>