<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <!-- Approximately separates paired and nearby device areas -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/listSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <!-- Paired devices heading -->

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/paired_devices"
        android:textColor="@color/text"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Paired devices list -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/devicesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/listSeparator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <!-- Displayed over the paired devices area if the list is empty -->

    <TextView
        android:id="@+id/noPairedDevicesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_paired_devices"
        android:textColor="@color/text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/devicesRecyclerView"
        app:layout_constraintEnd_toEndOf="@id/devicesRecyclerView"
        app:layout_constraintStart_toStartOf="@id/devicesRecyclerView"
        app:layout_constraintTop_toTopOf="@id/devicesRecyclerView" />

    <!-- Nearby devices heading -->

    <TextView
        android:id="@+id/nearbyDevicesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/nearby_devices"
        android:textColor="@color/text"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listSeparator" />

    <!-- Nearby devices found while searching -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nearbyDevicesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/scanningIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nearbyDevicesTitle" />

    <!-- Searching animation -->

    <ProgressBar
        android:id="@+id/scanningIndicator"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/pairButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Starts or stops searching -->

    <Button
        android:id="@+id/pairButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/list_item_background"
        android:text="@string/pair_new_device"
        android:textColor="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>